Prompt profile name after invite password setup
After a successful invite password set, the app now opens the Profile Name dialog immediately to finish onboarding, on both desktop and mobile.

--- a/apps/web-mobile/src/index.html
+++ b/apps/web-mobile/src/index.html
@@ -8109,6 +8109,10 @@
             passwordRequired = false;
             clearInviteHash();
             closeDialog(setPasswordDialog);
+            if (profileNameDialog) {
+              openDialog(profileNameDialog);
+              resetDialogScroll(profileNameDialog);
+            }
           } finally {
             if (setPasswordSave) setPasswordSave.disabled = false;
           }
