--- a/apps/web-desktop/src/index.html
+++ b/apps/web-desktop/src/index.html
@@ -7944,6 +7944,10 @@
             passwordRequired = false;
             clearInviteHash();
             closeDialog(setPasswordDialog);
+            if (profileNameDialog) {
+              openDialog(profileNameDialog);
+              resetDialogScroll(profileNameDialog);
+            }
           } finally {
             if (setPasswordSave) setPasswordSave.disabled = false;
           }
