Clean up desktop title and onboarding flows
Removed the version number from the desktop app menu/window title. Updated request access to use a modal Netlify form with thank‑you feedback and reliable field capture/clearing. Added invite‑only password setup with a follow‑up name prompt, scoped so existing users are not prompted.

--- a/apps/web-desktop/src/index.html
+++ b/apps/web-desktop/src/index.html
@@ -7896,8 +7896,7 @@
       };
       const enforcePasswordSet = (user) => {
         if (!user || !setPasswordDialog) return;
-        const alreadySet = user.user_metadata && user.user_metadata.password_set === true;
-        if (!isInviteLink() && alreadySet) return;
+        if (!isInviteLink()) return;
         passwordRequired = true;
         if (setPasswordMessage) setPasswordMessage.textContent = "Please set a password to continue.";
         if (setPasswordInput) setPasswordInput.value = "";
