Add missing type icon mappings for boxer briefs and red tag
Add default icon mappings for “boxer brief(s)” and “red tag” in desktop and mobile sources, and rebuild web-root/tauri outputs so the icons render in both web and desktop builds.

--- a/apps/web-desktop/src/index.html
+++ b/apps/web-desktop/src/index.html
@@ -6140,6 +6140,9 @@
         "socks": "assets/icons/socks.png",
         "comfort hoodie": "assets/icons/comfort.png",
         "hoodie": "assets/icons/comfort.png",
+        "boxer brief": "assets/icons/boxers.png",
+        "boxer briefs": "assets/icons/boxers.png",
+        "red tag": "assets/icons/shirt.png",
         "misc": "assets/icons/backpack.png",
         "hat": "assets/icons/hat.png",
         "outwear": "assets/icons/jacket.png",
