--- a/apps/web-mobile/src/index.html
+++ b/apps/web-mobile/src/index.html
@@ -661,6 +661,7 @@
         display: none !important;
       }
 
+      body[data-auth="signed-out"] .filter-row,
       body[data-auth="signed-out"] .filter-bar,
       body[data-auth="signed-out"] .tab-logo-panel {
         display: none !important;
@@ -687,6 +688,7 @@
         align-items: center;
         gap: 10px;
         border-bottom: none;
+        background: transparent;
       }
 
 
@@ -696,11 +698,13 @@
 
       body[data-auth="signed-out"] .sheet-footer {
         border-top: none;
+        background: transparent;
       }
 
 
       body[data-auth="signed-out"] .sheet {
         border-bottom: none;
+        background: linear-gradient(90deg, #c0c0c0, #efefef);
       }
 
       body[data-auth="signed-out"] .sheet-header h2 {
@@ -1951,6 +1955,28 @@
         margin-bottom: 8px;
       }
 
+      .privacy-dialog .dialog-body {
+        gap: 10px;
+        text-align: left;
+        font-size: 0.86rem;
+        line-height: 1.35;
+      }
+
+      .privacy-dialog .dialog-actions {
+        justify-content: center;
+      }
+
+      .privacy-dialog .dialog-body p,
+      .privacy-dialog .dialog-body div,
+      .privacy-dialog .dialog-body ul,
+      .privacy-dialog .dialog-body li {
+        margin: 0;
+      }
+
+      .privacy-dialog .dialog-body ul {
+        padding-left: 18px;
+      }
+
       dialog::backdrop {
         background: rgba(31, 26, 23, 0.3);
       }
@@ -2096,6 +2122,7 @@
 
       .photo-dialog {
         width: min(800px, 94vw);
+        min-height: 60vh;
         max-height: 90vh;
         display: none;
         flex-direction: column;
@@ -2118,6 +2145,7 @@
         height: auto;
         max-width: 100%;
         max-height: calc(90vh - 140px);
+        object-fit: contain;
         display: block;
       }
 
@@ -2822,7 +2850,7 @@
         <button type="button" class="btn" id="icon-credits-close">Close</button>
       </div>
     </dialog>
-    <dialog id="legal-disclaimer-dialog" class="about-dialog">
+    <dialog id="legal-disclaimer-dialog" class="privacy-dialog">
       <div class="dialog-body">
         <div><strong>Legal Disclaimer &amp; Terms of Use</strong></div>
         <div><strong>App Name:</strong> Shirt Tracker</div>
