Fix dropdown reset bug when editing rows
Fixed a bug where dropdown selections (Condition, Size, Type, Fandom, etc.) would reset to empty when performing other actions on the same row such as uploading a photo, editing the shirt name, or using the "Add new..." option. The root cause was twofold: the delegated event handler on the table body was writing the literal sentinel value "add_new" into state when a user opened the Add New prompt, and the renderRows function was destroying and rebuilding the entire table DOM without first committing current input values from the DOM back to state. Added a guard in handleCellEvent and flushInputsToState to skip select elements with the "add_new" sentinel value, and added a flushInputsToState call at the top of renderRows so all current cell values are saved to state before any table rebuild. Both fixes applied to desktop web and mobile web sources.

--- a/apps/web-desktop/src/index.html
+++ b/apps/web-desktop/src/index.html
@@ -6028,6 +6028,7 @@
         const rowId = target.dataset.rowId;
         const columnId = target.dataset.columnId;
         if (!rowId || !columnId) return;
+        if (target.tagName === "SELECT" && target.value === "__add_new__") return;
         if (event.type === "input") {
           rememberEditStart(rowId, columnId);
         }
@@ -6054,6 +6055,7 @@
           const rowId = input.dataset.rowId;
           const columnId = input.dataset.columnId;
           if (!rowId || !columnId) return;
+          if (input.tagName === "SELECT" && input.value === "__add_new__") return;
           const row = state.rows.find((item) => item.id === rowId);
           if (!row) return;
           if (!row.cells) row.cells = {};
@@ -7248,6 +7250,7 @@
       };
 
       const renderRows = () => {
+        flushInputsToState();
         sheetBody.innerHTML = "";
         if (state.columns.length === 0) {
           return;
