--- a/apps/web-mobile/src/index.html
+++ b/apps/web-mobile/src/index.html
@@ -6287,6 +6287,7 @@
         const rowId = target.dataset.rowId;
         const columnId = target.dataset.columnId;
         if (!rowId || !columnId) return;
+        if (target.tagName === "SELECT" && target.value === "__add_new__") return;
         if (event.type === "input") {
           rememberEditStart(rowId, columnId);
         }
@@ -6313,6 +6314,7 @@
           const rowId = input.dataset.rowId;
           const columnId = input.dataset.columnId;
           if (!rowId || !columnId) return;
+          if (input.tagName === "SELECT" && input.value === "__add_new__") return;
           const row = state.rows.find((item) => item.id === rowId);
           if (!row) return;
           if (!row.cells) row.cells = {};
@@ -7451,6 +7453,7 @@
       };
 
       const renderRows = () => {
+        flushInputsToState();
         sheetBody.innerHTML = "";
         if (state.columns.length === 0) {
           return;
