--- a/apps/web-desktop/src/index.html
+++ b/apps/web-desktop/src/index.html
@@ -3422,7 +3422,6 @@
         { id: createId(), name: "Condition", type: "select", options: [] },
         { id: createId(), name: "Shirt Name", type: "text", options: [] },
         { id: createId(), name: "Size", type: "select", options: [] },
-        { id: createId(), name: "Brand", type: "select", options: [] },
         { id: createId(), name: "Type", type: "select", options: [] },
         { id: createId(), name: "Fandom", type: "select", options: [] },
         { id: createId(), name: "Price", type: "number", options: [] },
@@ -5078,6 +5077,10 @@
       };
 
       const hasPromptedProfileName = () => {
+        if (currentUser) {
+          const meta = currentUser.user_metadata || {};
+          if (meta.display_name_skipped) return true;
+        }
         if (!canUseLocalStorage()) return false;
         try {
           return localStorage.getItem(PROFILE_NAME_PROMPT_KEY) === "true";
@@ -8182,8 +8185,19 @@
       });
 
       if (profileNameSkipButton) {
-        profileNameSkipButton.addEventListener("click", () => {
+        profileNameSkipButton.addEventListener("click", async () => {
           setPromptedProfileName();
+          if (supabase && currentUser) {
+            try {
+              await supabase.auth.updateUser({ data: { display_name_skipped: true } });
+              currentUser.user_metadata = {
+                ...(currentUser.user_metadata || {}),
+                display_name_skipped: true,
+              };
+            } catch (error) {
+              // localStorage fallback is already set
+            }
+          }
           closeDialog(profileNameDialog);
         });
       }
