--- a/apps/web-mobile/src/index.html
+++ b/apps/web-mobile/src/index.html
@@ -6320,6 +6320,11 @@
               const iconTd = tr.querySelector(".icon-cell");
               if (iconTd) {
                 iconTd.innerHTML = "";
+                if (typeVal) {
+                  iconTd.setAttribute("data-type", typeVal);
+                } else {
+                  iconTd.removeAttribute("data-type");
+                }
                 if (iconSrc) {
                   const img = document.createElement("img");
                   img.src = iconSrc;
@@ -7508,6 +7513,10 @@
           iconTd.setAttribute("data-label", "");
           const typeValue = getTypeValueForRow(row);
           const iconSrc = getTypeIconSrc(typeValue);
+          if (typeValue) iconTd.setAttribute("data-type", typeValue);
+          if (!state.readOnly && currentUser && !isViewerSession) {
+            iconTd.style.cursor = "pointer";
+          }
           if (iconSrc) {
             const img = document.createElement("img");
             img.src = iconSrc;
@@ -8410,6 +8419,20 @@
           closeDialog(profileNameDialog);
         });
       }
+      if (profileNameInput) {
+        profileNameInput.addEventListener("keydown", (event) => {
+          if (event.key === "Enter") {
+            event.preventDefault();
+            if (profileNameSaveButton) profileNameSaveButton.click();
+          }
+        });
+      }
+      if (profileNameDialog) {
+        profileNameDialog.addEventListener("cancel", (event) => {
+          event.preventDefault();
+          if (profileNameSkipButton) profileNameSkipButton.click();
+        });
+      }
       if (authActionSignedOutButton && authActionButton) {
         authActionSignedOutButton.addEventListener("click", () => {
           authActionButton.click();
@@ -8823,6 +8846,14 @@
       });
 
 
+      sheetBody.addEventListener("click", (event) => {
+        if (!currentUser || isViewerSession || state.readOnly) return;
+        const iconTd = event.target.closest(".icon-cell");
+        if (!iconTd) return;
+        const typeVal = iconTd.getAttribute("data-type");
+        if (!typeVal) return;
+        openTypeIconDialog(typeVal);
+      });
       sheetBody.addEventListener("input", handleCellEvent);
       sheetBody.addEventListener("change", handleCellEvent);
       sheetBody.addEventListener("focusin", (event) => {
