Style the loading indicator with Work Sans font and pulse animation
Restyled the auth loading indicator from an unstyled div with browser-default serif font to a polished UI element that matches the rest of the app. The loading text now uses Work Sans at 0.8rem with weight 600, uppercase letter-spacing at 0.12em, and the muted color variable. Added a loading-pulse keyframes animation that gently oscillates opacity between 0.4 and 1.0 on a 1.8s ease-in-out loop to communicate activity without being distracting. Changed the text from the dated Loading... with ellipsis to a clean LOADING since the pulse animation conveys the in-progress state visually. The keyframes rule is added right after the root CSS variables block in both desktop and mobile web sources.

--- a/apps/web-mobile/src/index.html
+++ b/apps/web-mobile/src/index.html
@@ -119,6 +119,11 @@
         --shadow: rgba(0, 0, 0, 0.2);
       }
 
+      @keyframes loading-pulse {
+        0%, 100% { opacity: 0.4; }
+        50% { opacity: 1; }
+      }
+
       * {
         box-sizing: border-box;
       }
@@ -2538,7 +2543,7 @@
             <div class="signedout-help">Please login to continue. Need access? <a href="#request-access" id="request-access-link">Request access</a>.</div>
             <div class="signedout-help"><a href="#forgot" id="forgot-password-link">Forgot password?</a></div>
           </div>
-          <div class="auth-loading" id="auth-loading" style="display:none;">Loading...</div>
+          <div class="auth-loading" id="auth-loading" style="display:none; font-family:'Work Sans','Trebuchet MS',sans-serif; font-size:0.8rem; font-weight:600; letter-spacing:0.12em; text-transform:uppercase; color:var(--muted); animation:loading-pulse 1.8s ease-in-out infinite;">Loading</div>
             <div class="header-actions">
               <div class="danger-zone">
                 <div id="mobile-action-table-wrap" style="width: 100%; display: flex; justify-content: center;">
