Fix share link failing when duplicate rows exist in Supabase
The public share link query used maybeSingle() which throws an error when more than one row in the shirt_state table matches the same publicShareId. The Supabase error PGRST116 was being caught and logged as a warning but no data was rendered, leaving the user stuck on the sign-in screen. Changed the query to use order by updated_at descending with limit 1 so it always picks the most recently updated row even when duplicates exist. Updated the result handling to work with the array response instead of a single object. Applied to both desktop and mobile web sources.

--- a/apps/web-mobile/src/index.html
+++ b/apps/web-mobile/src/index.html
@@ -4912,12 +4912,13 @@
           .from("shirt_state")
           .select("data, updated_at, user_id")
           .filter("data->>publicShareId", "eq", token)
-          .maybeSingle();
-        if (error || !data) {
+          .order("updated_at", { ascending: false })
+          .limit(1);
+        if (error || !data || !data.length) {
           console.warn("Failed to load public share state", error);
           return;
         }
-        applyPublicSharePayload(data);
+        applyPublicSharePayload(data[0]);
       };
 
       const setBackupStatus = (message) => {
