Hide help button on the signed-out login screen
Added the help button ID to the existing CSS rule that hides interactive controls when the user is signed out, so the floating question mark button only appears after authentication. Applied to both desktop and mobile web sources.

--- a/apps/web-mobile/src/index.html
+++ b/apps/web-mobile/src/index.html
@@ -662,7 +662,8 @@
       body[data-auth="signed-out"] #toggle-columns,
       body[data-auth="signed-out"] #sync-now,
       body[data-auth="signed-out"] #go-bottom,
-      body[data-auth="signed-out"] #go-top {
+      body[data-auth="signed-out"] #go-top,
+      body[data-auth="signed-out"] #help-button {
         display: none !important;
       }
 
