Hide help button for viewers and add welcome hint for new users
Added a CSS rule to hide the floating help button when viewing a shared inventory link (data-viewer=true), since the help text references controls that viewers cannot access. Updated the empty state in renderTable to show a welcome message pointing new users to the help button when they have default columns but only a single empty row. The hint reads Welcome! Start by filling in your first row and directs them to the ? button in the bottom-right corner, using Click on desktop and Tap on mobile. The message disappears automatically as soon as the user fills in any cell value.

--- a/apps/web-mobile/src/index.html
+++ b/apps/web-mobile/src/index.html
@@ -838,6 +838,10 @@
         display: none !important;
       }
 
+      body[data-viewer="true"] #help-button {
+        display: none !important;
+      }
+
       .btn.auth-signed-in {
         background: #ffffff;
         color: #0a7a2f;
@@ -7693,9 +7697,13 @@
       };
 
       const renderTable = () => {
-        emptyState.textContent = state.columns.length === 0
-          ? "Your sheet is empty. Add a column to start tracking shirts."
-          : "";
+        if (state.columns.length === 0) {
+          emptyState.textContent = "Your sheet is empty. Add a column to start tracking shirts.";
+        } else if (state.rows.length === 1 && state.columns.every((col) => !state.rows[0].cells[col.id])) {
+          emptyState.textContent = "Welcome! Start by filling in your first row. Tap the ? button in the bottom-right corner for help.";
+        } else {
+          emptyState.textContent = "";
+        }
         renderColumns();
         renderHeader();
         renderFilterOptions();
