--- a/apps/web-mobile/src/index.html
+++ b/apps/web-mobile/src/index.html
@@ -2189,13 +2189,14 @@
         align-items: center;
         justify-content: center;
         overflow: hidden;
+        min-height: 0;
       }
 
       .photo-dialog img {
         width: auto;
         height: auto;
         max-width: 100%;
-        max-height: calc(90vh - 140px);
+        max-height: 100%;
         object-fit: contain;
         display: block;
       }
