Fix gray row background on non-whitelisted tabs in responsive layout
The responsive card layout at max-width 980px had a hardcoded whitelist of six brand tab names that received white row backgrounds while all other tabs fell back to the default alternating gray. Replaced the brand-specific selectors with a universal body[data-active-tab] attribute selector so any tab including Retro Rifle and future additions automatically gets white backgrounds. Applied to both desktop and mobile web sources.

--- a/apps/web-mobile/src/index.html
+++ b/apps/web-mobile/src/index.html
@@ -2286,21 +2286,11 @@
           border-bottom: none;
         }
 
-        body[data-active-tab="7-Strong"] tbody tr,
-        body[data-active-tab="Dixxon"] tbody tr,
-        body[data-active-tab="Park Candy"] tbody tr,
-        body[data-active-tab="Project Good"] tbody tr,
-        body[data-active-tab="Reyn Spooner"] tbody tr,
-        body[data-active-tab="RSVLTS"] tbody tr {
+        body[data-active-tab] tbody tr {
           background: #ffffff;
         }
 
-        body[data-active-tab="7-Strong"] tbody td,
-        body[data-active-tab="Dixxon"] tbody td,
-        body[data-active-tab="Park Candy"] tbody td,
-        body[data-active-tab="Project Good"] tbody td,
-        body[data-active-tab="Reyn Spooner"] tbody td,
-        body[data-active-tab="RSVLTS"] tbody td {
+        body[data-active-tab] tbody td {
           border-bottom: none;
           background: #ffffff;
         }
